--- a/nodes/20210421_onnx 学习之旅.md
+++ b/nodes/20210421_onnx 学习之旅.md
@@ -18,6 +18,8 @@ ONNX 原来有版本啊
 
 开放神经网络交换 （Open Neural Network Exchange）简称 ONNX 是微软和 Facebook 提出用来表示深度学习模型的开放合适。
 
+> IR 是intermediate representation （中间表示）
+
 所谓开放就是 ONNX 定义了一组和环境平台无关的标准格式，来增强各种 AI 模型的可交互性。
 
 换句话说，无论你使用何种训练框架训练模型（Tensoflow/Pytorch...），在训练完毕后你可以将这些框架的模型统一转换成 ONNX 这种统一的格式进程存储。注意，ONNX 文件中不仅仅存储了**神经网络模型的权重**，同时也存储了**模型的结构信息**以及**网络中每一层的输入输出**和一些其他的辅助信息。
@@ -598,7 +600,9 @@ graph.input.extend([new_nv])
             print('get model input failed, check index or name')
 ```
 
-### 4.4 ONNXRuntime 介绍及用法
+## 5、ONNXRuntime 介绍及用法
+
+> https://zhuanlan.zhihu.com/p/346544539
 
 ONNXRuntime 是微软推出的一个推理架构，可以运行ONNX模型。支持多种运行后端包括 CPU，GPU，TensorRT，DML等。
 
@@ -612,6 +616,7 @@ image = np.expand_dims(image, axis=0)
 
 onnx_model = onnx.load_model("resnet18.onnx")
 sess = ort.inferenceSession(onnx_model.SerializeToString)
+
 sess.set_providers(['CPUExcutionProvider'])
 input_name = sess.get_inputs()[0].name
 output_name = sess.get_outputs()[0].name
@@ -621,17 +626,216 @@ prob = np.squeeze(output[0])
 print("predicting label: ", np.argmax(prb))
 ```
 
+ONNXRuntime 在推理一个 ONNX 模型时大概分为 ：
 
+- Session 构造
+- 模型加载与初始化
+- 运行阶段（和静态图架构类似）
 
+ONNXRuntime 框架是使用 C++ 开发的，同时使用 Wrapper 技术封装了 Python 接口
 
+### 5.1 第一阶段 Session 构造
 
+构造阶段即创建一个 InferenceSession 对象。使用 python 前端构建 Session 对象是，python 端会通过 `onnxruntime_pybind_state.c` 调用 C++ 中的 InferenceSession 类构造函数，得到一个 InferenceSession 对象。
 
+InferenceSession 构造阶段会进行各个成员的初始化，成员包括：
 
+- 负责 Opkernel 管理的 KernelRegistryManager 对象
+- 持有 Session 配置信息的 SessionOptions 对象
+- 负责图分割的 GraphTransformerManager
+- 负责log管理的 LoggingManager 
+- 等等
 
+当然，这个时候InferenceSession就是一个空壳子，只完成了对成员对象的初始构建。
 
+### 5.2 第二阶段 模型加载与初始化
 
+在完成 InferenceSession 对象的构造后，会将 ONNX 模型加载到 InferenceSession 中并进行进一步的初始化。
 
+**1. 模型加载**
 
+模型加载时，会在 C++ 后端调用对应的 Load() 函数，InferenceSession 一共提供了 8 种 Load 函数。从url，ModelProto，void* model data，model istream等读取ModelProto。InferenceSession 会对 ModelProto 进行解析然后持有其对应的Model成员。
+
+**2. Providers 注册**
+
+在 Load 函数结束后，InferenceSession 会调用两个函数：RegisterExecutionProviders() 和 sess->Initialize()；
+
+RegisterExecutionProviders 函数会完成 ExecutionProvider 的注册工作。**这里解释一下ExecutionProvider，ONNXRuntime 用 Provider 表示不同的运行设备比如 CUDAProvider 等。目前ONNXRuntimev1.0支持了包括CPU，CUDA，TensorRT，MKL等七种Providers**。通过调用sess->RegisterExecutionProvider()函数，InferenceSession通过一个list持有当前运行环境中支持的ExecutionProviders。
+
+**3. InferenceSession 初始化**
+
+即 sess->Initialize()，这是 InferenceSession 会根据自身持有的 model 和 execution providers 进行进一步的初始化（在第一阶段 Session构造时仅仅持有了空壳子成员变量）。该步骤是 InferemceSession 初始化的核心，一系列的核心操作如内存分配，model partition，kernel 注册等都会在这个阶段完成。
+
+1. 首先，session会根据 level 注册 graph optimization transformers，并通过 GraphTransformerManeger 成员进行持有。
+2. 接下来，session 会进行 OpKernel 注册，OpKernel  即定义的各个 node 对应在不同运行设备上的计算逻辑。这个过程会将持有的各个 ExecutionProvider 上定义的所有 node 对应的 Kernel 注册到 session 中，session 通过 KernelRegistryManager 成员进行持有和管理。
+3. 然后 session 会对 Graph 进行图变换，包括插入 copy 节点，cast 节点等。
+4. 接下来是 model partition，也就是根据运行设备对 graph 进行切分，决定每个 node 运行在哪个 provider 上。
+5. 最后，为每个 node 创建 ExecutionPlan，运行计划主要包含了各个 op 的执行顺序，内存申请管理，内存复用管理等操作。
+
+### 5.3 第三阶段 模型运行
+
+模型运行即I nferenceSession 每次读入一个batch的数据并进行计算得到模型的最终输出。然而其实绝大多数的工作早已经在 InferenceSession 初始化阶段完成。细看下源码就会发现 run 阶段主要是顺序调用各个 node 的对应 OpKerne l进行计算。
+
+### 5.4 ONNXRuntime源码之OpKernel注册
+
+> https://zhuanlan.zhihu.com/p/348387800
+
+## 6、ONNX 中的 Pass 机制
+
+ONNX是微软开源的一款model ir，也就是模型的中间表示。
+
+通常情况，我们仅仅是将ONNX作为一个中间表示，转换到ONNX后往往也马上转换到另一个框架或者平台。而其实ONNX提供了一套pass机制，可以让我们在转换到ONNX后，对模型进行进一步修剪加工，让接下来的转换或部署更加便捷。
+
+Pass机制功能强大，理论上通过Pass我们可以对模型进行任何想要的修改，给了开发者极大自由度的同时，使用起来并不不麻烦。
+
+### 6.1 Pass 相关类详解
+
+#### 6.1.1 Pass 基类
+
+Pass类是所有pass的基类，主要封装了数个核心的对外接口如runPass(Graph&)函数，各个派生类需要实现该函数，该函数传入一个Graph。不同的派生pass会根据自身功能对Graph进行不同操作。Pass基类同时约定了各个Pass的一些属性如PassOptimizationType，PassEfficiency，PassAnalysisType等，稍后会对各个属性进行详细介绍。
+
+#### 6.1.2 核心类 PredicateBasedPass
+
+PredicateBasedPass继承自Pass类并添加了多个常用函数，是ONNX中最常用的Pass类，一般情况下如果我们需要开发自己的Pass都会继承自该类并进行进一步的功能实现。
+
+如果继承自该类，只需要重写 `patternMatchPredicate` 函数和 `runTransform` 函数两个函数即可.
+
+PredicateBasedPass实现了runPass函数，该函数实现遍历传入Graph中的每个Node并进行判断，如果满足判断要求则进行特定的操作，具体的操作由runTransform函数负责实现。下面是runPass的核心逻辑：
+
+```c++
+bool initialized_pass = this->initializePass(graph);
+...
+for (auto it = graph.begin(); it != graph.end(); ++it) {
+    auto* n = *it;
+    num_changes += this->DescendOnGraphAttributesAndCount(
+        n, [this](Graph& g) { return _runPassInternal(g); });
+    if (this->patternMatchPredicate(n)) {
+      NodeDestroyType destroy_type = NodeDestroyType::DestroyZero;
+      num_changes += this->runTransform(n, graph, destroy_type);
+
+      if (destroy_type == NodeDestroyType::DestroyOne) {
+        it.destroyCurrent();
+      }
+      if (destroy_type == NodeDestroyType::DestroyTwo) {
+        it.destroyCurrent();
+        it.destroyCurrent();
+      }
+    }
+  }
+...
+bool finalized_pass = this->finalizePass(graph);
+```
+
+上面的代码不难看出，runPass会可以统计在传入的Graph中，发生了多少次修改。并且对于包含子图结构的Graph，也会递归运行在所有子图中的节点上。
+
+而对于initializePass和finalizePass，可以理解为两个hook用以初始pass和进行一些收尾操作，这两个函数都是Pass基类中的虚函数，用户可以自行编写。
+
+**patternMatchPredicate(Node\*)函数**
+
+PredicateBasedPass中定义的接口函数，需要用户重写，用来判断当前Node是否满足运行当前pass的条件。比如说，我想实现一个移除所有dropout功能的pass，判断函数可以这么写：
+
+```cpp
+  bool patternMatchPredicate(Node* node) override {
+    return (node->kind() == kDropout && node->hasAttribute(kratio));
+  }
+```
+
+**runTransform((Node\*, Graph&, NodeDestroyType&)函数**
+
+该函数是PredicateBasedPass提供的的接口函数，用户自定义pass时需要实现该函数。该函数的功能主要是定义当patternMatchPredicate函数返回True时，将对将该node进行何种操作。
+
+需要注意的是，runTransform函数会传入一个NodeDestroyType进行判断，当传入Node需要删除时需要将NodeDestroyType置为DestroyOne或DestroyTwo，Pass会自动对Node进行删除。而如果这个pass不会对传入Node进行删除，则将其置为DestroyZero即可。
+
+#### 6.1.3 FullGraphBasedPass类
+
+一个更加简单的pass类，继承自Pass基类，没有实现runPass函数，通常情况下在开发特定pass功能时，我们自定义的pass继承自已经写好runPass的PredicateBasePass类。 只有在需要自由定制runPass函数的功能时我们才继承自该类。
+
+#### 6.1.4 辅助类CountBasedPassAnalysis
+
+该类用来统计一个predicate based pass运行结束后Grpah的状态，也是runPass的返回值。该类可以用来记录pass运行后的一些状态，比说graphChanged()返回Graph是否发生了改变： numSucceededTransforms()返回发生了多少次成功的变换; fixedPointOptimizationNeeded()返回是否需要再次运行该pass等。
+
+#### 6.1.5 Pass种类
+
+ONNX同时声明了多个Pass的枚举成员，用以更加方便用户声明不同类型的Pass，比如说
+
+```cpp
+enum PassOptimizationType {
+  None = 0,
+  Compute = 1,
+  Memory = 2,
+  ComputeMemory = 3,
+  Stability = 4
+};
+enum PassType {
+  Fuse = 0,
+  Nop = 1,
+  Seperate = 2,
+  Immutable = 3,
+  Other = 4
+};
+```
+
+PassOptimizationType用来声明该pass的优化目的，PassType用来声明Pass的种类（干了什么）
+
+### 6.2 Pass管理和注册
+
+通常情况下，在继承自PredicateBasedPass并编写好自己的pass后，我们就可以直接调用pass了，但更科学的方法是用一个**全局pass注册机制**对pass进行持有，并在pass基础上进一步封装管理类提高pass调用的便捷性。
+
+#### 6.2.1 Pass注册类GlobalPassRegistry
+
+GlobalPassRegistry是ONNX中用来注册pass的类，该类的核心是保存一个map<std::string, std::shared_ptr<Pass>> passes用来注册pass。对外提供如find(string pass_name)等函数返回对应的pass；GetAvailablePasses()返回所有可用pass等功能。
+
+#### 6.2.2 Pass管理类PassManager
+
+Pass管理类通过对Pass提供进一步的封装，可以更加便捷的运行pass。
+
+PassManager是最基本的pass管理类，包含了add和run两个接口函数，分别可以向管理类中添加pass和运行所有pass。
+
+而GeneralPassManager是对PassManager功能的最基本实现。GeneralPassManager持有一个vector的pass进而可以做到多个特定组合pass 顺序运行的效果。
+
+FixedPointPassManager类同样继承自PassManager基类并且和GeneralPassManager类有一样的功能，但具备了一个判断能力，即重复运行passes直到graph不在发生任何改变为止。
+
+下面是ONNX提供的一个运行和管理pass的例子：
+
+下面是ONNX提供的一个运行和管理pass的例子：
+
+```cpp
+GlobalPassRegistry Optimizer::passes;
+
+Optimizer::Optimizer(
+    const std::vector<std::string>& names,
+    const bool fixed_point) {
+  if (fixed_point) {
+    this->pass_manager =
+        std::shared_ptr<FixedPointPassManager>(new FixedPointPassManager());
+  } else {
+    this->pass_manager =
+        std::shared_ptr<GeneralPassManager>(new GeneralPassManager());
+  }
+  for (const auto& name : names) {
+    auto pass = passes.find(name);
+    this->pass_manager->add(pass);
+  }
+}
+ModelProto Optimizer::optimize(const ModelProto& mp_in) {
+  std::shared_ptr<Graph> g(ImportModelProto(mp_in));
+  ModelProto mp_out = PrepareOutput(mp_in);
+  this->pass_manager->run(*g);
+  ExportModelProto(&mp_out, g);
+  return mp_out;
+}
+
+// 对外调用接口
+ModelProto Optimize(
+    const ModelProto& mp_in,
+    const std::vector<std::string>& names) {
+  Optimizer current_opt(names, false);
+  return current_opt.optimize(mp_in);
+}
+const std::vector<std::string> GetAvailablePasses() {
+  return Optimizer::passes.GetAvailablePasses();
+}
+```
 
 
 
